--- a/index.html
+++ b/index.html
@@ -3,57 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>WIN</title>
-        <a href="flag_test/flag.z01 "></a>
-        <a href="flag_test/flag.z02 "></a>
-        <a href="flag_test/flag.z03 "></a>
-        <a href="flag_test/flag.z04 "></a>
-        <a href="flag_test/flag.z05 "></a>
-        <a href="flag_test/flag.z06 "></a>
-        <a href="flag_test/flag.z07 "></a>
-        <a href="flag_test/flag.z08 "></a>
-        <a href="flag_test/flag.z09 "></a>
-        <a href="flag_test/flag.z10 "></a>
-        <a href="flag_test/flag.z11 "></a>
-        <a href="flag_test/flag.z12 "></a>
-        <a href="flag_test/flag.z13 "></a>
-        <a href="flag_test/flag.z14 "></a>
-        <a href="flag_test/flag.z15 "></a>
-        <a href="flag_test/flag.z16 "></a>
-        <a href="flag_test/flag.z17 "></a>
-        <a href="flag_test/flag.z18 "></a>
-        <a href="flag_test/flag.z19 "></a>
-        <a href="flag_test/flag.z20 "></a>
-        <a href="flag_test/flag.z21 "></a>
-        <a href="flag_test/flag.z22 "></a>
-        <a href="flag_test/flag.z23 "></a>
-        <a href="flag_test/flag.z24 "></a>
-        <a href="flag_test/flag.z25 "></a>
-        <a href="flag_test/flag.z26 "></a>
-        <a href="flag_test/flag.z27 "></a>
-        <a href="flag_test/flag.z28 "></a>
-        <a href="flag_test/flag.z29 "></a>
-<!--        <a href="flag_test/flag.z30 "></a>-->
-<!--        <a href="flag_test/flag.z31 "></a>-->
-<!--        <a href="flag_test/flag.z32 "></a>-->
-<!--        <a href="flag_test/flag.z33 "></a>-->
-<!--        <a href="flag_test/flag.z34 "></a>-->
-<!--        <a href="flag_test/flag.z35 "></a>-->
-<!--        <a href="flag_test/flag.z36 "></a>-->
-<!--        <a href="flag_test/flag.z37 "></a>-->
-<!--        <a href="flag_test/flag.z38 "></a>-->
-<!--        <a href="flag_test/flag.z39 "></a>-->
-<!--        <a href="flag_test/flag.z40 "></a>-->
-<!--        <a href="flag_test/flag.z41 "></a>-->
-<!--        <a href="flag_test/flag.z42 "></a>-->
-<!--        <a href="flag_test/flag.z43 "></a>-->
-<!--        <a href="flag_test/flag.z44 "></a>-->
-<!--        <a href="flag_test/flag.z45 "></a>-->
-<!--        <a href="flag_test/flag.z46 "></a>-->
-<!--        <a href="flag_test/flag.z47 "></a>-->
-<!--        <a href="flag_test/flag.z48 "></a>-->
-<!--        <a href="flag_test/flag.z49 "></a>-->
-<!--        <a href="flag_test/flag.z50 "></a>-->
-        <a href="flag_test/flag.zip"></a>
+        <a href="flag_test/flag.7z.001 "></a>
+		<a href="flag_test/flag.7z.002"></a>
+		<a href="flag_test/flag.7z.003"></a>
+		<a href="flag_test/flag.7z.004"></a>
+		<a href="flag_test/flag.7z.005"></a>
+		<a href="flag_test/flag.7z.006"></a>
+		<a href="flag_test/flag.7z.007"></a>
+		<a href="flag_test/flag.7z.008"></a>
+		<a href="flag_test/flag.7z.009"></a>
+		<a href="flag_test/flag.7z.010"></a>
+		<a href="flag_test/flag.7z.011"></a>
+		<a href="flag_test/flag.7z.012"></a>
+		<a href="flag_test/flag.7z.013"></a>
+		<a href="flag_test/flag.7z.014"></a>
+		<a href="flag_test/flag.7z.015"></a>
+		<a href="flag_test/flag.7z.016"></a>
+		<a href="flag_test/flag.7z.017"></a>
+		<a href="flag_test/flag.7z.018"></a>
+		<a href="flag_test/flag.7z.019"></a>
+		<a href="flag_test/flag.7z.020"></a>
+		<a href="flag_test/flag.7z.021"></a>
+		<a href="flag_test/flag.7z.022"></a>
+		<a href="flag_test/flag.7z.023"></a>
+		<a href="flag_test/flag.7z.024"></a>
+		<a href="flag_test/flag.7z.025"></a>
+		<a href="flag_test/flag.7z.026"></a>
+		<a href="flag_test/flag.7z.027"></a>
+		<a href="flag_test/flag.7z.028"></a>
+		<a href="flag_test/flag.7z.029"></a>
+		<a href="flag_test/flag.7z.030"></a>
+		<a href="flag_test/flag.7z.031"></a>
+		<a href="flag_test/flag.7z.032"></a>
+		<a href="flag_test/flag.7z.033"></a>
+		<a href="flag_test/flag.7z.034"></a>
+		<a href="flag_test/flag.7z.035"></a>
+		<a href="flag_test/flag.7z.036"></a>
+		<a href="flag_test/flag.7z.037"></a>
+		<a href="flag_test/flag.7z.038"></a>
+		<a href="flag_test/flag.7z.039"></a>
+		<a href="flag_test/flag.7z.040"></a>
+		<a href="flag_test/flag.7z.041"></a>
+		<a href="flag_test/flag.7z.042"></a>
+		<a href="flag_test/flag.7z.043"></a>
+		<a href="flag_test/flag.7z.044"></a>
+		<a href="flag_test/flag.7z.045"></a>
+
 
 
 </head>
