--- a/index.html
+++ b/index.html
@@ -1,58 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>WIN</title>
-        <a href="flag_test/flag.7z.001 "></a>
-		<a href="flag_test/flag.7z.002"></a>
-		<a href="flag_test/flag.7z.003"></a>
-		<a href="flag_test/flag.7z.004"></a>
-		<a href="flag_test/flag.7z.005"></a>
-		<a href="flag_test/flag.7z.006"></a>
-		<a href="flag_test/flag.7z.007"></a>
-		<a href="flag_test/flag.7z.008"></a>
-		<a href="flag_test/flag.7z.009"></a>
-		<a href="flag_test/flag.7z.010"></a>
-		<a href="flag_test/flag.7z.011"></a>
-		<a href="flag_test/flag.7z.012"></a>
-		<a href="flag_test/flag.7z.013"></a>
-		<a href="flag_test/flag.7z.014"></a>
-		<a href="flag_test/flag.7z.015"></a>
-		<a href="flag_test/flag.7z.016"></a>
-		<a href="flag_test/flag.7z.017"></a>
-		<a href="flag_test/flag.7z.018"></a>
-		<a href="flag_test/flag.7z.019"></a>
-		<a href="flag_test/flag.7z.020"></a>
-		<a href="flag_test/flag.7z.021"></a>
-		<a href="flag_test/flag.7z.022"></a>
-		<a href="flag_test/flag.7z.023"></a>
-		<a href="flag_test/flag.7z.024"></a>
-		<a href="flag_test/flag.7z.025"></a>
-		<a href="flag_test/flag.7z.026"></a>
-		<a href="flag_test/flag.7z.027"></a>
-		<a href="flag_test/flag.7z.028"></a>
-		<a href="flag_test/flag.7z.029"></a>
-		<a href="flag_test/flag.7z.030"></a>
-		<a href="flag_test/flag.7z.031"></a>
-		<a href="flag_test/flag.7z.032"></a>
-		<a href="flag_test/flag.7z.033"></a>
-		<a href="flag_test/flag.7z.034"></a>
-		<a href="flag_test/flag.7z.035"></a>
-		<a href="flag_test/flag.7z.036"></a>
-		<a href="flag_test/flag.7z.037"></a>
-		<a href="flag_test/flag.7z.038"></a>
-		<a href="flag_test/flag.7z.039"></a>
-		<a href="flag_test/flag.7z.040"></a>
-		<a href="flag_test/flag.7z.041"></a>
-		<a href="flag_test/flag.7z.042"></a>
-		<a href="flag_test/flag.7z.043"></a>
-		<a href="flag_test/flag.7z.044"></a>
-		<a href="flag_test/flag.7z.045"></a>
-
-
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<div id="container">
+        <div id="container-bg">
+            <div class="bg black"></div>
+            <div class="bg white"></div>
+        </div>
+        <div id="c-container">
+            <div id="ideas">
+                <div class="idea">
+                    <div id="idea-text-left" class="idea-text">Мой</div>
+                </div>
+                <div class="idea">
+                    <div id="idea-text-right" class="idea-text">Сайт</div>
+                </div>
+            </div>
+            <canvas id="c">Извините.</canvas>
+        </div>
+
+    </div>
+<!-- partial -->
+  <script src='TimelineMax.min.js'></script>
+<script src='TweenMax.min.js'></script>
+<script src='jquery-2.2.4.js'></script>
+<script src='browser.min.js'></script>
+<script src='imagesloaded.pkgd.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
