--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./style.css">
-  <title>WIN</title>
+  <title>WNS</title>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -15,10 +15,16 @@
         <div id="c-container">
             <div id="ideas">
                 <div class="idea">
-                    <div id="idea-text-left" class="idea-text">Страница</div>
+                    <div id="idea-text-left" class="idea-text">there</div>
                 </div>
                 <div class="idea">
-                    <div id="idea-text-right" class="idea-text">Победителя</div>
+                    <div id="idea-text-right" class="idea-text">is</div>
+                </div>
+                <div class="idea">
+                    <div id="idea-text-left" class="idea-text">nothing</div>
+                </div>
+                <div class="idea">
+                    <div id="idea-text-right" class="idea-text">here</div>
                 </div>
             </div>
             <canvas id="c">Извините.</canvas>
