--- a/index.html
+++ b/index.html
@@ -1,95 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <title>WNS</title>
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div id="container">
-        <div id="container-bg">
-            <div class="bg black"></div>
-            <div class="bg white"></div>
-        </div>
-        <div id="c-container">
-            <div id="ideas">
-                <div class="idea">
-                    <div id="idea-text-left" class="idea-text">there</div>
-                </div>
-                <div class="idea">
-                    <div id="idea-text-right" class="idea-text">is</div>
-                </div>
-                <div class="idea">
-                    <div id="idea-text-left" class="idea-text">nothing</div>
-                </div>
-                <div class="idea">
-                    <div id="idea-text-right" class="idea-text">here</div>
-                </div>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./style.css">
+        <title>WNS</title>
+    </head>
+    <body>
+        <div id="container">
+            <div id="container-bg">
+                <div class="bg black"></div>
+                <div class="bg white"></div>
             </div>
-            <canvas id="c">Извините.</canvas>
+                <div id="c-container">
+                    <div id="ideas">
+                        <div class="idea">
+                            <div id="idea-text-left" class="idea-text">there</div>
+                        </div>
+                        <div class="idea">
+                            <div id="idea-text-right" class="idea-text">is</div>
+                        </div>
+                        <div class="idea">
+                            <div id="idea-text-left" class="idea-text">nothing</div>
+                        </div>
+                        <div class="idea">
+                            <div id="idea-text-right" class="idea-text">here</div>
+                        </div>
+                    </div>
+                    <canvas id="c"></canvas>
+                </div>
         </div>
+            
+        <script src='TimelineMax.min.js'></script>
+        <script src='TweenMax.min.js'></script>
+        <script src='jquery-2.2.4.js'></script>
+        <script src='browser.min.js'></script>
+        <script src='imagesloaded.pkgd.min.js'></script><script  src="./script.js"></script>
 
-    </div>
-<!-- partial -->
-  <script src='TimelineMax.min.js'></script>
-<script src='TweenMax.min.js'></script>
-<script src='jquery-2.2.4.js'></script>
-<script src='browser.min.js'></script>
-<script src='imagesloaded.pkgd.min.js'></script><script  src="./script.js"></script>
-
-<div>
-<a href="flag_snake/flag.z01 "></a>
-<a href="flag_snake/flag.z02 "></a>
-<a href="flag_snake/flag.z03 "></a>
-<a href="flag_snake/flag.z04 "></a>
-<a href="flag_snake/flag.z05 "></a>
-<a href="flag_snake/flag.z06 "></a>
-<a href="flag_snake/flag.z07 "></a>
-<a href="flag_snake/flag.z08 "></a>
-<a href="flag_snake/flag.z09 "></a>
-<a href="flag_snake/flag.z10 "></a>
-<a href="flag_snake/flag.z11 "></a>
-<a href="flag_snake/flag.z12 "></a>
-<a href="flag_snake/flag.z13 "></a>
-<a href="flag_snake/flag.z14 "></a>
-<a href="flag_snake/flag.z15 "></a>
-<a href="flag_snake/flag.z16 "></a>
-<a href="flag_snake/flag.z17 "></a>
-<a href="flag_snake/flag.z18 "></a>
-<a href="flag_snake/flag.z19 "></a>
-<a href="flag_snake/flag.z20 "></a>
-<a href="flag_snake/flag.z21 "></a>
-<a href="flag_snake/flag.z22 "></a>
-<a href="flag_snake/flag.z23 "></a>
-<a href="flag_snake/flag.z24 "></a>
-<a href="flag_snake/flag.z25 "></a>
-<a href="flag_snake/flag.z26 "></a>
-<a href="flag_snake/flag.z27 "></a>
-<a href="flag_snake/flag.z28 "></a>
-<a href="flag_snake/flag.z29 "></a>
-<a href="flag_snake/flag.z30 "></a>
-<a href="flag_snake/flag.z31 "></a>
-<a href="flag_snake/flag.z32 "></a>
-<a href="flag_snake/flag.z33 "></a>
-<a href="flag_snake/flag.z34 "></a>
-<a href="flag_snake/flag.z35 "></a>
-<a href="flag_snake/flag.z36 "></a>
-<a href="flag_snake/flag.z37 "></a>
-<a href="flag_snake/flag.z38 "></a>
-<a href="flag_snake/flag.z39 "></a>
-<a href="flag_snake/flag.z40 "></a>
-<a href="flag_snake/flag.z41 "></a>
-<a href="flag_snake/flag.z42 "></a>
-<a href="flag_snake/flag.z43 "></a>
-<a href="flag_snake/flag.z44 "></a>
-<a href="flag_snake/flag.z45 "></a>
-<a href="flag_snake/flag.z46 "></a>
-<a href="flag_snake/flag.z47 "></a>
-<a href="flag_snake/flag.z48 "></a>
-<a href="flag_snake/flag.z49 "></a>
-<a href="flag_snake/flag.z50 "></a>
-</div>
-
-</body>
+        <div id="don't open">
+            <a href="flag_snake/flag.z01 "></a>
+            <a href="flag_snake/flag.z02 "></a>
+            <a href="flag_snake/flag.z03 "></a>
+            <a href="flag_snake/flag.z04 "></a>
+            <a href="flag_snake/flag.z05 "></a>
+            <a href="flag_snake/flag.z06 "></a>
+            <a href="flag_snake/flag.z07 "></a>
+            <a href="flag_snake/flag.z08 "></a>
+            <a href="flag_snake/flag.z09 "></a>
+            <a href="flag_snake/flag.z10 "></a>
+            <a href="flag_snake/flag.z11 "></a>
+            <a href="flag_snake/flag.z12 "></a>
+            <a href="flag_snake/flag.z13 "></a>
+            <a href="flag_snake/flag.z14 "></a>
+            <a href="flag_snake/flag.z15 "></a>
+            <a href="flag_snake/flag.z16 "></a>
+            <a href="flag_snake/flag.z17 "></a>
+            <a href="flag_snake/flag.z18 "></a>
+            <a href="flag_snake/flag.z19 "></a>
+            <a href="flag_snake/flag.z20 "></a>
+            <a href="flag_snake/flag.z21 "></a>
+            <a href="flag_snake/flag.z22 "></a>
+            <a href="flag_snake/flag.z23 "></a>
+            <a href="flag_snake/flag.z24 "></a>
+            <a href="flag_snake/flag.z25 "></a>
+            <a href="flag_snake/flag.z26 "></a>
+            <a href="flag_snake/flag.z27 "></a>
+            <a href="flag_snake/flag.z28 "></a>
+            <a href="flag_snake/flag.z29 "></a>
+            <a href="flag_snake/flag.z30 "></a>
+            <a href="flag_snake/flag.z31 "></a>
+            <a href="flag_snake/flag.z32 "></a>
+            <a href="flag_snake/flag.z33 "></a>
+            <a href="flag_snake/flag.z34 "></a>
+            <a href="flag_snake/flag.z35 "></a>
+            <a href="flag_snake/flag.z36 "></a>
+            <a href="flag_snake/flag.z37 "></a>
+            <a href="flag_snake/flag.z38 "></a>
+            <a href="flag_snake/flag.z39 "></a>
+            <a href="flag_snake/flag.z40 "></a>
+            <a href="flag_snake/flag.z41 "></a>
+            <a href="flag_snake/flag.z42 "></a>
+            <a href="flag_snake/flag.z43 "></a>
+            <a href="flag_snake/flag.z44 "></a>
+            <a href="flag_snake/flag.z45 "></a>
+            <a href="flag_snake/flag.z46 "></a>
+            <a href="flag_snake/flag.z47 "></a>
+            <a href="flag_snake/flag.z48 "></a>
+            <a href="flag_snake/flag.z49 "></a>
+            <a href="flag_snake/flag.z50 "></a>
+        </div>
+    </body>
 </html>
